# lcnc_deploy_demo

./: .env.example  .gitignore  README.md  Report_Builder_Feature_Documentation.md  datasources-lang.ts  deployer-lang.ts  docker-compose.yml  migrations.json  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
apps/builder/: project.json  tsconfig.app.json  tsconfig.spec.json
apps/builder-api/: Dockerfile  pyproject.toml
apps/client-api/: Dockerfile  pyproject.toml
apps/deployer-api/: Dockerfile  pyproject.toml
docs/: ARCHITECTURE.docx  ARCHITECTURE.md  Frontend_UI_Components_Guide.md  Frontend_Unit_Testing_Guide.md  QuantaOps_Form_Actions_Node_Catalog_and_Sample_Workflows.docx  Report_Builder_Feature_Documentation-may-29.md  Workflow Builder UI Ready Functionalities.docx  Workflow_Builder_Node_Actions_Config_Panel.md  Workflow_Builder_UI_Only_Mock_Implementation_Roadmap.md  Workflow_Builder_Upcoming_Implementation_Plan.docx  Workflow_Builder_Upcoming_Implementation_Plan.md  Workflow_Builder_Zoho_Tasks.csv  builder-compliance-audit.md  deployment-pr-review.md  deployment-subpages-top-pages-plan.md  feature-lang-guide.md  form-builder-phase2-guide.md  i18n-localization-approach.md  i18n-reference.md  page-builder-data-binding-guide.md  page-builder-page-ui-features.md  page-builder-understanding.md  pr-review-violations.md  quanta-ops-backend-guidelines.md  quanta-ops-ui-ux-guidelines.md  team-i18n-start-here.md  workflow-builder-implementation-phases.md  workflow-builder-master-implementation.md
services/auth-service/: Dockerfile  pyproject.toml
tools/: audit-all-i18n.mjs  audit-datasources-i18n.mjs  audit-deployer-i18n.mjs  audit-form-builder-i18n.mjs  audit-global-i18n.mjs  audit-page-builder-i18n.mjs  audit-report-builder-i18n.mjs  audit-workflow-builder-i18n.mjs  check-datasource-architecture.mjs  generate-datasources-en-json.mjs  generate-deployer-en-json.mjs  generate-form-builder-en-json.mjs  generate-page-builder-en-json.mjs  generate-report-builder-en-json.mjs  generate-workflow-builder-en-json.mjs
(+1584 files in other folders)
