[project]
name = "auth-service"
version = "1.0.0"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "psycopg[async]>=3.1.0",
  "psycopg-pool>=3.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "boto3>=1.34.0",
  "pydantic-settings>=2.0.0",
  "qo-db @ file://../../packages/qo-db",
  "qo-auth @ file://../../packages/qo-auth",
  "qo-utils @ file://../../packages/qo-utils",
]
